fix bug 1012965 - Date picker looks broken in chrome
I implemented a utility function called `isDateInputSupported`.
In case date inputs are supported by the browser, jQuery UI is not used. This is especially nice for mobile.
However, style should still be somewhat adjusted to accomodate for UI bits Chrome adds (date doesn't fit in the box anymore).

EDIT: Boxes are now wide enough.

--- a/fjord/analytics/static/css/dashboard.less
+++ b/fjord/analytics/static/css/dashboard.less
@@ -354,7 +354,7 @@ ul.bars {
 #whentext {
   margin-top: 5px;
   input[type=date] {
-    width: 75px;
+    width: 9em;
   }
 }
 
